--- a/FastTester.UI.Avalonia/FastTester.UI.Avalonia.csproj
+++ b/FastTester.UI.Avalonia/FastTester.UI.Avalonia.csproj
@@ -17,5 +17,10 @@
     <PackageReference Include="Avalonia.ReactiveUI" Version="$(AvaloniaVersion)" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="$(AvaloniaVersion)" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FastTester.Logic\FastTester.Logic.csproj" />
   </ItemGroup>
 </Project>
